Release 2.1-dev
===============

New Features
------------

:mod:`rpy2.rinterface`:

- New functions for specifying callback functions for R's front-ends:
  :func:`setShowMessage`, :func:`setFlushConsole`, :func:`setChooseFile`, :func:`setShowFiles`

- Wrapper for R_ProcessEvents (# suggested by June Kim to help with issues related to interactive display)

Changes
-------

:mod:`rpy2.rinterface`:

- the default for reading and writing the console are now using sys.stdin and sys.stdout 
  (# patch submitted by Nathaniel Smith)
 
Bugs fixed
----------

- Failing to initialize R now throws a RuntimeError

- Fix installation bug when the include directories contain either '-' or 'I'
  #spotted by James Yoo


Release 2.0.1
=============

New features
------------

:mod:`rpy2.robjects`:

- Property `names` for the :class:`RVector` methods :meth:`getnames` 
  and :meth:`setnames` (this was likely forgotten for Release 2.0.0).

- Property `rclass` for :class:`RObjectMixin` 

Changes
-------

:mod:`rpy2.robjects`:

- :meth:`rclass` becomes :meth:`getrclass`

Bugs fixed
----------

- Having the environment variable R_HOME specified resulted in an error
  when importing :mod:`rpy2.rinterface` # root of the problem spotted by Peter

- Setup.py has no longer a (possibly outdated) static hardcoded version number
  for rpy2

- Testing no longer stops with an error in the absence of the third-party
  module :mod:`numpy`

- :meth:`rpy2.rlike.container.TaggedList.pop` is now returning the element
  matching the given index



Release 2.0.0
=============

New features
------------

- New module :mod:`rpy2.robjects.conversion`.

- New module :mod:`rpy2.robjects.numpy2ri` to convert :mod:`numpy` objects
  into :mod:`rpy2` objects. 
  # adapted from a patch contributed by Nathaniel Smith


Changes
-------

- :meth:`RObject.__repr__` moved to :meth:`RObject.r_repr`


Bugs fixed
----------

- Informative message returned as RuntimeError when failing to find R's HOME
